--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             { name: "Douggw", planets: ["4:298:7m","4:298:9m","5:190:6m","5:190:7","5:190:8","5:190:9m","5:190:10m","6:190:7"] },
             { name: "DownInSmoke", planets: ["1:464:7m","2:462:7m","3:462:1m","3:462:11m","3:462:12m","4:462:6m","5:350:7m","6:462:7m"] },
             { name: "Engineer Serpentis", planets: ["1:111:15m","2:437:7","2:438:1m","2:438:7m","2:438:10","2:438:15","2:463:15m","4:142:6m"] },
-            { name: "Faded", planets: ["4:276:8m","4:295:7","4:295:9m","4:295:10","4:295:12m","5:190:5m","5:190:11m","6:344:8m","6:344:9"] },
+            { name: "Faded", planets: ["4:276:8m","4:295:7","4:295:9m","4:295:10","4:295:12m","5:190:5m","5:190:11m","6:344:8m","6:344:9m"] },
             { name: "Guth", planets: ["4:128:7","4:130:6","4:130:7","4:133:5","6:155:6"] },
             { name: "Hax N Flames", planets: ["1:435:1","1:436:6m","1:436:11m","1:443:5m","2:265:6m","3:399:10m","4:239:6","5:436:6"] },
             { name: "hellfire", planets: ["1:152:9m","1:152:10m","2:152:9m","2:203:9m","2:497:8m","3:12:9m","3:419:8m","4:193:8m","4:240:8m"] },
@@ -218,7 +218,7 @@
             { name: "Syn Nickel", planets: ["4:297:7","4:297:9","4:297:10m","5:193:7","5:193:8","5:193:9"] },
             { name: "Tezza02", planets: ["1:236:8m","2:225:8","3:235:7","3:235:8m","3:236:7","3:236:8","3:237:8","3:238:7","3:238:8","4:241:8m"] },
             { name: "UKClimber", planets: ["1:266:8m","1:457:8m","1:496:5m","2:203:7m","2:453:8m","3:208:1m","3:458:8m","4:239:9","5:155:7m","5:370:8m"] },
-            { name: "Weafyr", planets: ["1:461:6","5:219:7","5:219:10","6:316:2","6:316:13"] },
+            { name: "Weafyr", planets: ["1:461:6","2:25:8","5:219:7m","5:219:10","6:316:2","6:316:13"] },
             { name: "xTHA_user1", planets: ["1:152:7","1:172:12m"] },
             { name: "Zyfox", planets: ["5:39:8","5:203:10"] }
         ];
