--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
         <div class="controls">
             <div class="logo">Ogame Census</div>
             <div v-for="view in $root.$data.views" class="switch" :class="$root.$data.activeView === view ? 'active' : ''" @click="changeView(view)">{{ view }} view</div>
+            <select @change="loadAlliance">
+                <option selected value="500020">Dark Phoenix [DKPHNX]</option>
+                <option value="500019">Hogwarts [HOG]</option>
+                <option value="500132">Vandals [VAN]</option>
+                <option value="500148">NamoAmitabha [Amitabha]</option>
+                <option value="500021">OldSkool [O_S]</option>
+                <option value="500016">Balkan Power [B-P]</option>
+                <option value="500013">ANGELS OF DEATH [ANGELS]</option>
+                <option value="500217">The Ogame Assassins [Vengence]</option>
+                <option value="500128">ELITA [ELITA]</option>
+                <option value="500015">Cerberus [CRB]</option>
+                <option value="500079">ZucaTuga - Unity [ZT-U]</option>
+                <option value="500184">Einherjar [Mead]</option>
+                <option value="500077">WIND [WIND]</option>
+                <option value="500118">SpaceX [SpaceX]</option>
+                <option value="500057">RO Fighters [RoF]</option>
+                <option value="500085">Croatia [CRO]</option>
+                <option value="500314">Avicii [Avicii]</option>
+            </select>
         </div>
     </script>
 
@@ -22,7 +41,7 @@
 
     <script type="text/x-template" id="GalaxyView">
         <div class="galaxy-view" :class="$root.$data.activeView === 'galaxy' ? 'active' : ''">
-            <div class="galaxy" v-for="(galaxy, i) in $root.$data.galaxyViewData" v-once>
+            <div class="galaxy" v-for="(galaxy, i) in $root.$data.galaxyViewData">
                 <div class="title">Galaxy {{ i + 1 }}</div>
                 <div class="player" v-for="(player, name) in galaxy" :class="player.player.state === 0 ? 'vacation' : ''">
                     {{ name }} <span>({{ player.count }} planet{{ player.count > 1 ? 's' : '' }}, {{player.moonCount}} moon{{ player.moonCount !== 1 ? 's' : '' }})</span>
@@ -36,7 +55,7 @@
 
     <script type="text/x-template" id="SystemView">
         <div class="system-view" :class="$root.$data.activeView === 'system' ? 'active' : ''">
-            <div class="galaxy" v-for="galaxy in $root.$data.map" v-once>
+            <div class="galaxy" v-for="galaxy in $root.$data.map">
                 <div class="title">Galaxy {{ galaxy.galaxy }}</div>
                 <div class="system" v-for="system in galaxy.systems">
                     <div class="planet id">{{ galaxy.galaxy + ':' + system.system }}</div>
